feat: improve logging experience 🔊